[869] Set Dockerfile to global build context

--- a/projects/_01_ingest/cqc_api/fargate/Dockerfile
+++ b/projects/_01_ingest/cqc_api/fargate/Dockerfile
@@ -6,11 +6,16 @@ RUN mkdir -p /tmp/polars
 
 WORKDIR /app
 
-COPY requirements.txt .
+ENV PYTHONPATH=/app
+
+COPY utils /app/utils
+COPY polars_utils /app/polars_utils
+COPY projects/_01_ingest/cqc_api/utils /app/projects/_01_ingest/cqc_api/utils
+COPY schemas/cqc_provider_schema_polars.py /app/schemas/cqc_provider_schema_polars.py
+COPY projects/_01_ingest/cqc_api/fargate/requirements.txt /app/requirements.txt
+COPY projects/_01_ingest/cqc_api/fargate/delta_download_cqc_providers.py /app/delta_download_cqc_providers.py
 
 RUN pip install --no-cache-dir -r requirements.txt
-
-COPY delta_download_cqc_providers.py .
 
 CMD ["python", "delta_download_cqc_providers.py", "--destination_prefix", "s3://spike-polars-data", \
     "--start_timestamp", "2025-07-15:T01:30Z", "--end_timestamp", "2025-07-23:T01:30Z"]
