--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ orbs:
   aws-cli: circleci/aws-cli@5.4.1
 
 jobs:
-  lambda-function-containerisation:
+  task-containerisation:
     docker:
       - image: docker:latest
     steps:
@@ -31,11 +31,11 @@ jobs:
       - run:
           name: Build Docker Images
           command: |
-            echo "Rebuilding create dataset snapshot container and pushing to ECR."
-            docker buildx build  --platform linux/amd64 -t latest --no-cache --pull -f lambdas/create_dataset_snapshot/Dockerfile .
-            
             # Authenticate Docker to ECR
             docker login -u AWS -p $(aws ecr get-login-password --region eu-west-2) ${AWS_ACCOUNT_ID}.dkr.ecr.eu-west-2.amazonaws.com
+            
+            echo "Rebuilding create dataset snapshot container and pushing to ECR."
+            docker buildx build  --platform linux/amd64 -t latest --no-cache --pull -f lambdas/create_dataset_snapshot/Dockerfile .
             
             # Push the image
             docker tag latest ${AWS_ACCOUNT_ID}.dkr.ecr.eu-west-2.amazonaws.com/lambda/create-snapshot:${CIRCLE_BRANCH}
@@ -44,12 +44,16 @@ jobs:
             echo "Rebuilding check dataset equality container and pushing to ECR."
             docker buildx build  --platform linux/amd64 -t latest --no-cache --pull -f lambdas/check_dataset_equality/Dockerfile .
 
-            # Authenticate Docker to ECR
-            docker login -u AWS -p $(aws ecr get-login-password --region eu-west-2) ${AWS_ACCOUNT_ID}.dkr.ecr.eu-west-2.amazonaws.com
-
             # Push the image
             docker tag latest ${AWS_ACCOUNT_ID}.dkr.ecr.eu-west-2.amazonaws.com/lambda/check-datasets-equal:${CIRCLE_BRANCH}
             docker push ${AWS_ACCOUNT_ID}.dkr.ecr.eu-west-2.amazonaws.com/lambda/check-datasets-equal:${CIRCLE_BRANCH}
+            
+            echo "Building the CQC Providers job and push to ECR."
+            docker buildx build  --platform linux/amd64 -t latest --no-cache --pull -f projects/_01_ingest/cqc_api/fargate/providers/Dockerfile .
+
+            # Push the image
+            docker tag latest ${AWS_ACCOUNT_ID}.dkr.ecr.eu-west-2.amazonaws.com/ingest/cqc/providers:${CIRCLE_BRANCH}
+            docker push ${AWS_ACCOUNT_ID}.dkr.ecr.eu-west-2.amazonaws.com/ingest/cqc/providers:${CIRCLE_BRANCH}
 
   test:
     docker:
@@ -102,7 +106,7 @@ jobs:
           name: Install black
           command: pip install black==23.7.0
       - run:
-          name: Check Python fomatting
+          name: Check Python formatting
           command: black . --check
 
   lint-docstrings:
@@ -115,7 +119,7 @@ jobs:
           name: Install pydoclint
           command: pip install pydoclint==0.5.9
       - run:
-          name: Check docstring fomatting
+          name: Check docstring formatting
           command: pydoclint --style=google --quiet .
 
   lint-terraform:
@@ -125,7 +129,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Check terraform fomatting
+          name: Check terraform formatting
           command: terraform fmt -check -recursive -diff
 
   terraform-plan:
