--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -292,14 +292,14 @@ workflows:
           filters:
             branches:
               ignore: main
-#      - test:
-#          filters:
-#            branches:
-#              ignore: main
-#      - lint-python:
-#          filters:
-#            branches:
-#              ignore: main
+      - test:
+          filters:
+            branches:
+              ignore: main
+      - lint-python:
+          filters:
+            branches:
+              ignore: main
       - lint-terraform:
           filters:
             branches:
@@ -311,7 +311,7 @@ workflows:
       - terraform-plan:
           requires:
             - lint-terraform
-#            - test
+            - test
             - lambda-function-containerisation
       - terraform-apply:
           requires:
