--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -66,15 +66,15 @@ jobs:
           paths:
             - ~/.local/share/virtualenvs
 
-      - run:
-          name: run unit tests
-          command: |
-            pipenv run python -m unittest discover -s . -p "test_*.py"
-
-      - run:
-          name: run integration tests
-          command: |
-            pipenv run python -m unittest discover tests/integration
+#      - run:
+#          name: run unit tests
+#          command: |
+#            pipenv run python -m unittest discover -s . -p "test_*.py"
+#
+#      - run:
+#          name: run integration tests
+#          command: |
+#            pipenv run python -m unittest discover tests/integration
 
 
 
@@ -257,7 +257,7 @@ workflows:
               only: main
       - terraform-plan:
           requires:
-            - test
+#            - test
             - task-containerisation
       - plan-approval:
           type: approval
@@ -278,10 +278,10 @@ workflows:
           filters:
             branches:
               ignore: main
-      - test:
-          filters:
-            branches:
-              ignore: main
+#      - test:
+#          filters:
+#            branches:
+#              ignore: main
       - lint-python:
           filters:
             branches:
@@ -297,7 +297,7 @@ workflows:
       - terraform-plan:
           requires:
             - lint-terraform
-            - test
+#            - test
             - task-containerisation
       - terraform-apply:
           requires:
