--- a/lambdas/check_dataset_equality/Dockerfile
+++ b/lambdas/check_dataset_equality/Dockerfile
@@ -12,6 +12,7 @@ RUN  pip install -r requirements.txt
 # Copy function code
 COPY lambdas/check_dataset_equality/lambda_function.py .
 COPY utils/column_names utils/column_names/
+COPY projects/tools projects/tools/
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.lambda_handler" ]
