--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,7 +60,6 @@ jobs:
           command: |
             sudo pip install pipenv
             pipenv install --dev
-            pipenv run pip install coverage
 
       - save_cache:
           key: v1.1-deps-{{ checksum "Pipfile.lock" }}
@@ -68,19 +67,12 @@ jobs:
             - ~/.local/share/virtualenvs
 
       - run:
-          name: run unit tests
+          name: run unit tests with coverage
           command: |
-            pipenv run coverage run --source=. -m unittest discover -s . -p "test_*.py"
-      
-      - run:
-          name: Generate coverage report
-          command: |
-            pipenv run coverage report
-            pipenv run coverage xml
-            pipenv run coverage html
+            pipenv run pytest --cov=. --cov-report=term-missing --cov-report=xml --cov-report=html --ignore=tests/integration
 
       - run:
-          name: run integration tests
+          name: Run integration tests
           command: |
             pipenv run python -m unittest discover tests/integration
 
