--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -60,6 +60,7 @@ jobs:
           command: |
             sudo pip install pipenv
             pipenv install --dev
+            pipenv run pip install coverage
 
       - save_cache:
           key: v1.1-deps-{{ checksum "Pipfile.lock" }}
@@ -67,12 +68,19 @@ jobs:
             - ~/.local/share/virtualenvs
 
       - run:
-          name: run unit tests with coverage
+          name: run unit tests
           command: |
-            pipenv run pytest --cov=. --cov-report=term-missing --cov-report=xml --cov-report=html --ignore=tests/integration
+            pipenv run coverage run --source=. -m unittest discover -s . -p "test_*.py"
+      
+      - run:
+          name: Generate coverage report
+          command: |
+            pipenv run coverage report
+            pipenv run coverage xml
+            pipenv run coverage html
 
       - run:
-          name: Run integration tests
+          name: run integration tests
           command: |
             pipenv run python -m unittest discover tests/integration
 
