--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,26 +286,26 @@ workflows:
           filters:
             branches:
               ignore: main
-      - test:
-          filters:
-            branches:
-              ignore: main
-      - lint-python:
-          filters:
-            branches:
-              ignore: main
+#      - test:
+#          filters:
+#            branches:
+#              ignore: main
+#      - lint-python:
+#          filters:
+#            branches:
+#              ignore: main
       - lint-terraform:
           filters:
             branches:
               ignore: main
-      - lint-docstrings:
-          filters:
-            branches:
-              ignore: main
+#      - lint-docstrings:
+#          filters:
+#            branches:
+#              ignore: main
       - terraform-plan:
           requires:
             - lint-terraform
-            - test
+#            - test
             - task-containerisation
       - terraform-apply:
           requires:
