--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -282,31 +282,31 @@ workflows:
   test-plan-and-deploy-to-dev:
     unless: << pipeline.parameters.GHA_Action >>
     jobs:
-#      - task-containerisation:
-#          filters:
-#            branches:
-#              ignore: main
-#      - test:
-#          filters:
-#            branches:
-#              ignore: main
-#      - lint-python:
-#          filters:
-#            branches:
-#              ignore: main
+      - task-containerisation:
+          filters:
+            branches:
+              ignore: main
+      - test:
+          filters:
+            branches:
+              ignore: main
+      - lint-python:
+          filters:
+            branches:
+              ignore: main
       - lint-terraform:
           filters:
             branches:
               ignore: main
-#      - lint-docstrings:
-#          filters:
-#            branches:
-#              ignore: main
+      - lint-docstrings:
+          filters:
+            branches:
+              ignore: main
       - terraform-plan:
           requires:
             - lint-terraform
-#            - test
-#            - task-containerisation
+            - test
+            - task-containerisation
       - terraform-apply:
           requires:
             - terraform-plan
