--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -286,10 +286,10 @@ workflows:
           filters:
             branches:
               ignore: main
-      - test:
-          filters:
-            branches:
-              ignore: main
+      # - test:
+      #     filters:
+      #       branches:
+      #         ignore: main
       - lint-python:
           filters:
             branches:
@@ -305,7 +305,7 @@ workflows:
       - terraform-plan:
           requires:
             - lint-terraform
-            - test
+            # - test
             - task-containerisation
       - terraform-apply:
           requires:
