--- a/lambdas/create_dataset_snapshot/Dockerfile
+++ b/lambdas/create_dataset_snapshot/Dockerfile
@@ -11,7 +11,7 @@ RUN pip install -r requirements.txt
 COPY lambdas/create_dataset_snapshot/lambda_function.py .
 COPY lambdas/utils/snapshots.py utils/
 COPY utils/column_names utils/column_names/
-COPY projects/tools projects/tools/
+COPY schemas schemas/
 
 # Set the CMD to your handler (could also be done as a parameter override outside of the Dockerfile)
 CMD [ "lambda_function.lambda_handler" ]
