--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            sudo pip install pipenv
+            pip install pipenv
             pipenv install --dev
       - save_cache:
           key: v1.1-deps-{{ checksum "Pipfile.lock" }}
