--- a/Pipfile
+++ b/Pipfile
@@ -15,13 +15,13 @@ urllib3 = "2.5.0"
 black = "25.1.0"
 openpyxl = "3.1.5"
 pydeequ = "1.5.0"
-pyspark = "4.0.0"
 pydoclint = "0.6.10"
 pandas = "2.3.2"
 numpy = "2.3.2"
 polars = "1.32.3"
 scikit-learn = "1.7.1"
 pointblank = "0.12.2"
+pyspark = "~=3.5"
 
 [dev-packages]
 pylint = "3.3.8"
