--- a/Pipfile
+++ b/Pipfile
@@ -4,31 +4,29 @@ verify_ssl = true
 name = "pypi"
 
 [requires]
-python_full_version = "3.13.5"
+python_full_version = "3.12.10"
 
 [packages]
-boto3 = "1.40.19"
-mock = "5.2.0"
-requests = "2.32.5"
-ratelimit = "2.2.1"
-urllib3 = "2.5.0"
 black = "25.1.0"
+boto3 = "1.40.19"
+numpy = "2.3.2"
 openpyxl = "3.1.5"
+pandas = "2.3.2"
+pointblank = "0.12.2"
+polars = "1.32.3"
 pydeequ = "1.5.0"
 pydoclint = "0.6.10"
-pandas = "2.3.2"
-numpy = "2.3.2"
-polars = "1.32.3"
+pyspark = "3.5.0"
+ratelimit = "2.2.1"
+requests = "2.32.5"
 scikit-learn = "1.7.1"
-pointblank = "0.12.2"
-pyspark = "~=3.5"
+urllib3 = "2.5.0"
 
 [dev-packages]
-pylint = "3.3.8"
 autopep8 = "2.3.2"
-pandas = "2.3.2"
-pytest-watch = "4.2.0"
-ipykernel = "6.30.1"
-pre-commit = "4.3.0"
 coverage = "7.10.5"
-requests-mock = "*"
+ipykernel = "6.30.1"
+mock = "5.2.0"
+pre-commit = "4.3.0"
+pylint = "3.3.8"
+pytest-watch = "4.2.0"
