--- a/Pipfile
+++ b/Pipfile
@@ -4,28 +4,30 @@ verify_ssl = true
 name = "pypi"
 
 [requires]
-python_full_version = "3.9.6"
+python_full_version = "3.11.12"
 
 [packages]
-boto3 = "==1.20.7"
-mock = "==5.1.0"
-requests = "==2.31.0"
-ratelimit = "==2.2.1"
-urllib3 = "==1.26.18"
-black = "==23.7.0"
-openpyxl = "==3.1.2"
-pydeequ = "==1.4.0"
-pyspark = "==3.3.4"
-pydoclint = "==0.5.9"
-pandas = "==1.3.2"
-numpy = "==1.26.3"
-polars = "*"
+black = "25.1.0"
+boto3 = "1.40.21"
+numpy = "2.3.2"
+openpyxl = "3.1.5"
+pandas = "2.3.2"
+pointblank = "0.13.1"
+polars = "1.32.3"
+pydeequ = "1.5.0"
+pydoclint = "0.6.11"
+pyspark = "3.5.4"
+ratelimit = "2.2.1"
+requests = "2.32.5"
+scikit-learn = "1.7.1"
+urllib3 = "2.5.0"
+moto = {extras = ["all"], version = "*"}
 
 [dev-packages]
-pylint = "==2.17.4"
-autopep8 = "==2.0.2"
-pandas = "==1.3.2"
-pytest-watch = "==4.2.0"
-ipykernel = "==6.29.0"
-pre-commit = "==4.2.0"
-coverage = "*"
+autopep8 = "2.3.2"
+coverage = "7.10.6"
+ipykernel = "6.30.1"
+mock = "5.2.0"
+pre-commit = "4.3.0"
+pylint = "3.3.8"
+pytest-watch = "4.2.0"
