--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -313,9 +313,9 @@ workflows:
       - deploy-dependencies:
           requires:
             - terraform-apply
-      - copy-default-data:
-          requires:
-            - terraform-apply
+#      - copy-default-data:
+#          requires:
+#            - terraform-apply
 
   delete-development-environment:
     when: << pipeline.parameters.GHA_Action >>
