--- a/projects/_01_ingest/cqc_api/fargate/Dockerfile
+++ b/projects/_01_ingest/cqc_api/fargate/Dockerfile
@@ -1,22 +1,23 @@
 FROM python:3.11-slim
 
 ENV POLARS_TEMP_DIR=/tmp/polars
+ENV PYTHONPATH=/app
 
 RUN mkdir -p /tmp/polars
 
 WORKDIR /app
 
-ENV PYTHONPATH=/app
-
+# dependencies
 COPY utils /app/utils
 COPY polars_utils /app/polars_utils
 COPY projects/_01_ingest/cqc_api/utils /app/projects/_01_ingest/cqc_api/utils
 COPY schemas/cqc_provider_schema_polars.py /app/schemas/cqc_provider_schema_polars.py
 COPY schemas/cqc_locations_schema_polars.py /app/schemas/cqc_locations_schema_polars.py
-COPY projects/_01_ingest/cqc_api/fargate/requirements.txt /app/requirements.txt
-COPY projects/_01_ingest/cqc_api/fargate/delta_download_cqc_providers.py /app/delta_download_cqc_providers.py
-COPY projects/_01_ingest/cqc_api/fargate/delta_download_cqc_locations.py /app/delta_download_cqc_locations.py
 
+# Copy all Python scripts from fargate directory
+COPY projects/_01_ingest/cqc_api/fargate/*.py /app/
+
+COPY projects/_01_ingest/cqc_api/fargate/requirements.txt /app/requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
 ENTRYPOINT ["python"]
