[954] Simplify validate args using datasets config

--- a/projects/_01_ingest/cqc_api/fargate/Dockerfile
+++ b/projects/_01_ingest/cqc_api/fargate/Dockerfile
@@ -1,23 +1,25 @@
 FROM python:3.11-slim
 
+RUN mkdir -p /tmp/polars
+WORKDIR /app
+
 ENV POLARS_TEMP_DIR=/tmp/polars
 ENV PYTHONPATH=/app
 
-RUN mkdir -p /tmp/polars
+# Dependencies
+COPY utils utils
+COPY polars_utils polars_utils
+COPY projects/_01_ingest/cqc_api/utils projects/_01_ingest/cqc_api/utils
+COPY schemas/cqc_provider_schema_polars.py schemas/cqc_provider_schema_polars.py
+COPY schemas/cqc_locations_schema_polars.py schemas/cqc_locations_schema_polars.py
 
-WORKDIR /app
+# Copy all python jobs to WORKDIR
+COPY projects/_01_ingest/cqc_api/fargate/*.py .
 
-# dependencies
-COPY utils /app/utils
-COPY polars_utils /app/polars_utils
-COPY projects/_01_ingest/cqc_api/utils /app/projects/_01_ingest/cqc_api/utils
-COPY schemas/cqc_provider_schema_polars.py /app/schemas/cqc_provider_schema_polars.py
-COPY schemas/cqc_locations_schema_polars.py /app/schemas/cqc_locations_schema_polars.py
+# Validation script
+COPY validation/src/validate_datasets.py .
 
-# Copy all Python scripts from fargate directory
-COPY projects/_01_ingest/cqc_api/fargate/*.py /app/
-
-COPY projects/_01_ingest/cqc_api/fargate/requirements.txt /app/requirements.txt
+COPY projects/_01_ingest/cqc_api/fargate/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 ENTRYPOINT ["python"]
