--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,18 +63,13 @@ jobs:
       - run:
           name: run unit tests
           command: |
-            # pipenv run coverage run --source=. -m unittest discover -s . -p "test_*.py"
-            pipenv run coverage run -m unittest tests/integration/test_cqc_api_integration.py
+            pipenv run coverage run --source=. -m unittest discover -s . -p "test_*.py"
       - run:
           name: Generate coverage report
           command: |
             pipenv run coverage report
             pipenv run coverage xml
             pipenv run coverage html
-      - run:
-          name: run integration tests
-          command: |
-            pipenv run python -m unittest discover tests/integration
       - store_artifacts:
           path: htmlcov
 
