[954] File rename references

--- a/projects/_01_ingest/cqc_api/fargate/Dockerfile
+++ b/projects/_01_ingest/cqc_api/fargate/Dockerfile
@@ -17,7 +17,7 @@ COPY schemas/cqc_locations_schema_polars.py schemas/cqc_locations_schema_polars.
 COPY projects/_01_ingest/cqc_api/fargate/*.py .
 
 # Validation script
-COPY polars_utils/validate_datasets.py .
+COPY polars_utils/validate.py .
 COPY polars_utils/config config
 
 COPY projects/_01_ingest/cqc_api/fargate/requirements.txt .
