--- a/projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/Dockerfile
+++ b/projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/Dockerfile
@@ -10,6 +10,7 @@ ENV PYTHONPATH=/app
 
 COPY polars_utils /app/polars_utils
 COPY projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/requirements.txt /app/requirements.txt
+COPY utils/column_names utils/column_names/
 COPY projects/_03_independent_cqc/_07_estimate_filled_posts_by_job_role/fargate/estimate_ind_cqc_filled_posts_by_job_role.py /app/estimate_ind_cqc_filled_posts_by_job_role.py
 
 RUN pip install --no-cache-dir -r requirements.txt
