[967] Fix IAM policies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,10 +262,10 @@ workflows:
           filters:
             branches:
               ignore: main
-      - test:
-          filters:
-            branches:
-              ignore: main
+#      - test:
+#          filters:
+#            branches:
+#              ignore: main
       - lint-python:
           filters:
             branches:
