--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -281,7 +281,7 @@ workflows:
       - terraform-plan:
           requires:
             - lint-terraform
-            - test
+#            - test
             - task-containerisation
       - terraform-apply:
           requires:
