[976] Fix incorrect reference in Dockerfile

--- a/projects/_03_independent_cqc/_04a_preprocessing/fargate/Dockerfile
+++ b/projects/_03_independent_cqc/_04a_preprocessing/fargate/Dockerfile
@@ -9,7 +9,7 @@ WORKDIR /app
 ENV PYTHONPATH=/app
 
 COPY polars_utils /app/polars_utils
-COPY projects/_03_independent_cqc/_04a_preprocessing/fargate/preprocessing.py /app/projects/_03_independent_cqc/_04a_preprocessing/fargate/preprocessing.py
+COPY projects/_03_independent_cqc/_04a_preprocessing/fargate/preprocessing.py /app/preprocessing.py
 COPY projects/_03_independent_cqc/_05_model/fargate/requirements.txt /app/requirements.txt
 
 
