--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -262,10 +262,10 @@ workflows:
           filters:
             branches:
               ignore: main
-      # - test:
-      #     filters:
-      #       branches:
-      #         ignore: main
+      - test:
+          filters:
+            branches:
+              ignore: main
       - lint-python:
           filters:
             branches:
@@ -281,7 +281,7 @@ workflows:
       - terraform-plan:
           requires:
             - lint-terraform
-            # - test
+            - test
             - task-containerisation
       - terraform-apply:
           requires:
